--- a/advancesearchdlg.ui
+++ b/advancesearchdlg.ui
@@ -49,8 +49,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>162</width>
+               <height>186</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -229,8 +229,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>253</width>
+               <height>186</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout">
@@ -430,8 +430,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>253</width>
+               <height>130</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_15">
@@ -569,7 +569,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>259</width>
+               <width>217</width>
                <height>488</height>
               </rect>
              </property>
@@ -971,7 +971,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>259</width>
+               <width>253</width>
                <height>712</height>
               </rect>
              </property>
@@ -1539,8 +1539,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>210</width>
+               <height>292</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -1773,7 +1773,7 @@
                <x>0</x>
                <y>0</y>
                <width>276</width>
-               <height>316</height>
+               <height>354</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -1913,7 +1913,7 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>259</width>
+               <width>210</width>
                <height>460</height>
               </rect>
              </property>
@@ -2340,7 +2340,27 @@
         <item>
          <widget class="QPushButton" name="addtoBtn">
           <property name="text">
-           <string>添加分类</string>
+           <string>添加属性</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="verticalSpacer_10">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item>
+         <widget class="QPushButton" name="modifyButton">
+          <property name="text">
+           <string>修改属性</string>
           </property>
          </widget>
         </item>
