--- a/advancesearchdlg.ui
+++ b/advancesearchdlg.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>查询</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_8">
    <item>
@@ -49,8 +49,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>190</width>
+               <height>228</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -229,8 +229,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>314</width>
+               <height>228</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout">
@@ -382,18 +382,18 @@
                 </item>
                 <item>
                  <widget class="QDateEdit" name="movepartEndDateEdit">
-                  <property name="displayFormat">
-                   <string>yyyy年/MM月/dd日</string>
-                  </property>
-                  <property name="calendarPopup">
-                   <bool>true</bool>
-                  </property>
                   <property name="date">
                    <date>
                     <year>2014</year>
                     <month>1</month>
                     <day>1</day>
                    </date>
+                  </property>
+                  <property name="displayFormat">
+                   <string>yyyy年/MM月/dd日</string>
+                  </property>
+                  <property name="calendarPopup">
+                   <bool>true</bool>
                   </property>
                  </widget>
                 </item>
@@ -430,8 +430,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>290</width>
+               <height>158</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_15">
@@ -569,8 +569,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>259</width>
-               <height>488</height>
+               <width>270</width>
+               <height>607</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -971,8 +971,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>259</width>
-               <height>712</height>
+               <width>314</width>
+               <height>887</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -1539,8 +1539,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>258</width>
+               <height>362</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -1772,8 +1772,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>276</width>
-               <height>316</height>
+               <width>286</width>
+               <height>350</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_6">
@@ -1794,7 +1794,11 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QComboBox" name="feg_ferrographysheetidCbBox"/>
+                 <widget class="QComboBox" name="feg_ferrographysheetidCbBox">
+                  <property name="editable">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </item>
@@ -1836,7 +1840,11 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QComboBox" name="feg_ferrographymakemethodCbBox"/>
+                 <widget class="QComboBox" name="feg_ferrographymakemethodCbBox">
+                  <property name="editable">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </item>
@@ -1857,7 +1865,11 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QComboBox" name="feg_ferrographyanalyzertypeCbBox"/>
+                 <widget class="QComboBox" name="feg_ferrographyanalyzertypeCbBox">
+                  <property name="editable">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </item>
@@ -1913,8 +1925,8 @@
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>259</width>
-               <height>460</height>
+               <width>249</width>
+               <height>572</height>
               </rect>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_7">
@@ -2383,7 +2395,7 @@
       <item row="0" column="0">
        <widget class="QTabWidget" name="queryResultTabWidget">
         <property name="currentIndex">
-         <number>0</number>
+         <number>7</number>
         </property>
         <property name="elideMode">
          <enum>Qt::ElideNone</enum>
