--- a/imageproperties.ui
+++ b/imageproperties.ui
@@ -26,7 +26,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>3</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -641,7 +641,11 @@
        </widget>
       </item>
       <item row="6" column="9" colspan="3">
-       <widget class="QComboBox" name="_comboBoxOilSampleSituation"/>
+       <widget class="QComboBox" name="_comboBoxOilSampleSituation">
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
