--- a/MoliProperties.ui
+++ b/MoliProperties.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1067</width>
-    <height>363</height>
+    <height>348</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,6 +23,34 @@
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_17">
+    <item row="3" column="2">
+     <widget class="QComboBox" name="_comboBoxMoliGuy">
+      <property name="editable">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <widget class="QComboBox" name="_comboBoxMoliID">
+      <property name="editable">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="4">
+     <widget class="QLabel" name="_labelResultImage">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aa5500;&quot;&gt;未标注&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="3">
+     <widget class="QLabel" name="label_121">
+      <property name="text">
+       <string>磨粒颜色</string>
+      </property>
+     </widget>
+    </item>
     <item row="4" column="0" colspan="2">
      <widget class="QLabel" name="label_109">
       <property name="text">
@@ -30,15 +58,83 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="0" colspan="2">
-     <widget class="QLabel" name="label_110">
+    <item row="3" column="0" colspan="2">
+     <widget class="QLabel" name="label_118">
       <property name="text">
-       <string>磨粒形状</string>
+       <string>磨粒标注人</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="2">
-     <widget class="QComboBox" name="_comboBoxMoliID">
+    <item row="4" column="6">
+     <widget class="QLineEdit" name="_editMoliSize"/>
+    </item>
+    <item row="6" column="3">
+     <widget class="QLabel" name="label_122">
+      <property name="text">
+       <string>磨粒磨损机理</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="3">
+     <widget class="QLabel" name="label_113">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;磨粒图片(路径)&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="5">
+     <widget class="QLabel" name="label_124">
+      <property name="text">
+       <string>磨粒表面纹理类型</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="0" colspan="2">
+     <widget class="QLabel" name="label_116">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;磨粒编号&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="5">
+     <widget class="QLabel" name="label_131">
+      <property name="text">
+       <string>掩码图像</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="5">
+     <widget class="QLabel" name="label_123">
+      <property name="text">
+       <string>磨粒尺寸</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="8">
+     <widget class="QLineEdit" name="_editMoliLength"/>
+    </item>
+    <item row="7" column="2">
+     <widget class="QLabel" name="_labelOriginalImage">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="7">
+     <widget class="QLabel" name="label_132">
+      <property name="text">
+       <string>铁谱分析报告编号</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="2">
+     <widget class="QComboBox" name="_comboBoxMoliShape">
       <property name="editable">
        <bool>true</bool>
       </property>
@@ -51,13 +147,6 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="4">
-     <widget class="QComboBox" name="_comboBoxMoliImageID">
-      <property name="editable">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
     <item row="0" column="5">
      <widget class="QLabel" name="label_112">
       <property name="text">
@@ -65,24 +154,10 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="2">
-     <widget class="QComboBox" name="_comboBoxMoliGuy">
-      <property name="editable">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="3">
-     <widget class="QLabel" name="label_113">
+    <item row="4" column="7">
+     <widget class="QLabel" name="label_126">
       <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;磨粒图片(路径)&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="4" colspan="6">
-     <widget class="QLineEdit" name="_editMoliPath">
-      <property name="enabled">
-       <bool>false</bool>
+       <string>磨粒周长</string>
       </property>
      </widget>
     </item>
@@ -93,38 +168,10 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="2">
-     <widget class="QComboBox" name="_comboBoxMoliShape">
-      <property name="editable">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="0" colspan="2">
-     <widget class="QLabel" name="label_114">
+    <item row="7" column="0" colspan="2">
+     <widget class="QLabel" name="label_129">
       <property name="text">
-       <string>磨粒损伤部位</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="2">
-     <widget class="QComboBox" name="_comboBoxMoliErodePart">
-      <property name="editable">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0" colspan="2">
-     <widget class="QLabel" name="label_116">
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;磨粒编号&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0" colspan="2">
-     <widget class="QLabel" name="label_118">
-      <property name="text">
-       <string>磨粒标注人</string>
+       <string>原始图像</string>
       </property>
      </widget>
     </item>
@@ -135,24 +182,59 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="3">
-     <widget class="QLabel" name="label_121">
+    <item row="7" column="3">
+     <widget class="QLabel" name="label_130">
       <property name="text">
-       <string>磨粒颜色</string>
+       <string>标注结果</string>
       </property>
      </widget>
     </item>
-    <item row="6" column="3">
-     <widget class="QLabel" name="label_122">
-      <property name="text">
-       <string>磨粒磨损机理</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="4">
-     <widget class="QComboBox" name="_comboBoxMoliPosition">
+    <item row="0" column="4">
+     <widget class="QComboBox" name="_comboBoxMoliImageID">
       <property name="editable">
        <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="7" column="6">
+     <widget class="QLabel" name="_labelMaskImage">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aa5500;&quot;&gt;未标注&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0" colspan="2">
+     <widget class="QLabel" name="label_110">
+      <property name="text">
+       <string>磨粒形状</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="6">
+     <widget class="QComboBox" name="_comboBoxMoliPianID">
+      <property name="editable">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="7">
+     <widget class="QLabel" name="label_127">
+      <property name="text">
+       <string>磨粒磨损类型</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="8">
+     <widget class="QComboBox" name="_comboBoxMoliReportID">
+      <property name="editable">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="4" colspan="6">
+     <widget class="QLineEdit" name="_editMoliPath">
+      <property name="enabled">
+       <bool>false</bool>
       </property>
      </widget>
     </item>
@@ -170,36 +252,26 @@
       </property>
      </widget>
     </item>
-    <item row="4" column="5">
-     <widget class="QLabel" name="label_123">
-      <property name="text">
-       <string>磨粒尺寸</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="5">
-     <widget class="QLabel" name="label_124">
-      <property name="text">
-       <string>磨粒表面纹理类型</string>
-      </property>
-     </widget>
-    </item>
-    <item row="6" column="5">
-     <widget class="QLabel" name="label_125">
-      <property name="text">
-       <string>磨粒反映故障信息</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="6">
-     <widget class="QComboBox" name="_comboBoxMoliPianID">
+    <item row="4" column="4">
+     <widget class="QComboBox" name="_comboBoxMoliPosition">
       <property name="editable">
        <bool>true</bool>
       </property>
      </widget>
     </item>
-    <item row="4" column="6">
-     <widget class="QLineEdit" name="_editMoliSize"/>
+    <item row="5" column="8">
+     <widget class="QComboBox" name="_comboBoxMoliErodeType">
+      <property name="editable">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="6" column="0" colspan="2">
+     <widget class="QLabel" name="label_114">
+      <property name="text">
+       <string>磨粒损伤部位</string>
+      </property>
+     </widget>
     </item>
     <item row="5" column="6">
      <widget class="QComboBox" name="_comboBoxMoliSurface">
@@ -215,34 +287,10 @@
       </property>
      </widget>
     </item>
-    <item row="0" column="8">
-     <widget class="QComboBox" name="_comboBoxMoliReportID">
-      <property name="editable">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="7">
-     <widget class="QLabel" name="label_126">
+    <item row="6" column="5">
+     <widget class="QLabel" name="label_125">
       <property name="text">
-       <string>磨粒周长</string>
-      </property>
-     </widget>
-    </item>
-    <item row="4" column="8">
-     <widget class="QLineEdit" name="_editMoliLength"/>
-    </item>
-    <item row="5" column="7">
-     <widget class="QLabel" name="label_127">
-      <property name="text">
-       <string>磨粒磨损类型</string>
-      </property>
-     </widget>
-    </item>
-    <item row="5" column="8">
-     <widget class="QComboBox" name="_comboBoxMoliErodeType">
-      <property name="editable">
-       <bool>true</bool>
+       <string>磨粒反映故障信息</string>
       </property>
      </widget>
     </item>
@@ -260,89 +308,45 @@
       </property>
      </widget>
     </item>
-    <item row="7" column="2">
-     <widget class="QLabel" name="_labelOriginalImage">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="0" colspan="2">
-     <widget class="QLabel" name="label_129">
-      <property name="text">
-       <string>原始图像</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="3">
-     <widget class="QLabel" name="label_130">
-      <property name="text">
-       <string>标注结果</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="4">
-     <widget class="QLabel" name="_labelResultImage">
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aa5500;&quot;&gt;未标注&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="5">
-     <widget class="QLabel" name="label_131">
-      <property name="text">
-       <string>掩码图像</string>
-      </property>
-     </widget>
-    </item>
-    <item row="7" column="6">
-     <widget class="QLabel" name="_labelMaskImage">
-      <property name="text">
-       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aa5500;&quot;&gt;未标注&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="7">
-     <widget class="QLabel" name="label_132">
-      <property name="text">
-       <string>铁谱分析报告编号</string>
+    <item row="6" column="2">
+     <widget class="QComboBox" name="_comboBoxMoliErodePart">
+      <property name="editable">
+       <bool>true</bool>
       </property>
      </widget>
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>390</x>
+     <x>430</x>
      <y>290</y>
-     <width>98</width>
-     <height>27</height>
+     <width>178</width>
+     <height>32</height>
     </rect>
    </property>
-   <property name="text">
-    <string>保存</string>
-   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>保存</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="text">
+       <string>取消</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
-   <property name="geometry">
-    <rect>
-     <x>520</x>
-     <y>290</y>
-     <width>98</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>取消</string>
-   </property>
-  </widget>
+  <zorder>layoutWidget_2</zorder>
+  <zorder>pushButton</zorder>
+  <zorder>pushButton_2</zorder>
+  <zorder></zorder>
  </widget>
  <resources/>
  <connections/>
