--- a/RegionCompetition.ui
+++ b/RegionCompetition.ui
@@ -46,7 +46,7 @@
            <string>笔画</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -80,7 +80,7 @@
            <string>前景</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -90,7 +90,7 @@
            <string>背景</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -100,7 +100,7 @@
            <string>橡皮</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_4</string>
+           <string>buttonGroup_4</string>
           </attribute>
          </widget>
         </item>
@@ -137,7 +137,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -150,7 +150,7 @@
            <bool>false</bool>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -160,7 +160,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_3</string>
+           <string>buttonGroup_3</string>
           </attribute>
          </widget>
         </item>
@@ -196,7 +196,7 @@
            <string>矩形</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -206,7 +206,7 @@
            <string>多边形</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -216,7 +216,7 @@
            <string>手工</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup</string>
+           <string>buttonGroup</string>
           </attribute>
          </widget>
         </item>
@@ -281,7 +281,7 @@
            <bool>true</bool>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
+           <string>buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -291,7 +291,7 @@
            <string>中</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
+           <string>buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -301,7 +301,7 @@
            <string>粗</string>
           </property>
           <attribute name="buttonGroup">
-           <string notr="true">buttonGroup_2</string>
+           <string>buttonGroup_2</string>
           </attribute>
          </widget>
         </item>
@@ -366,25 +366,29 @@
        </layout>
       </item>
       <item>
-       <widget class="QSlider" name="sliderBasicOp">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="labelSliderLeft">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="labelSliderRight">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+       <layout class="QHBoxLayout" name="horizontalLayout_9">
+        <item>
+         <widget class="QLabel" name="labelSliderLeft">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QSlider" name="sliderBasicOp">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QLabel" name="labelSliderRight">
+          <property name="text">
+           <string/>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </widget>
@@ -394,9 +398,9 @@
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="buttonGroup"/>
   <buttongroup name="buttonGroup_2"/>
   <buttongroup name="buttonGroup_3"/>
   <buttongroup name="buttonGroup_4"/>
+  <buttongroup name="buttonGroup"/>
  </buttongroups>
 </ui>
