--- a/ImageCompletion.qrc
+++ b/ImageCompletion.qrc
@@ -26,5 +26,6 @@
         <file>icons/export.png</file>
         <file>icons/import.png</file>
         <file>icons/login_logo.png</file>
+        <file>icons/login_bg.jpg</file>
     </qresource>
 </RCC>
