--- a/login.ui
+++ b/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>391</width>
-    <height>270</height>
+    <width>553</width>
+    <height>351</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -28,8 +28,8 @@
      <widget class="QLineEdit" name="_editUsername">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>80</y>
+        <x>300</x>
+        <y>90</y>
         <width>181</width>
         <height>27</height>
        </rect>
@@ -44,8 +44,8 @@
      <widget class="QLineEdit" name="_editPasswd">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>120</y>
+        <x>300</x>
+        <y>150</y>
         <width>181</width>
         <height>27</height>
        </rect>
@@ -63,8 +63,8 @@
      <widget class="QPushButton" name="_login">
       <property name="geometry">
        <rect>
-        <x>150</x>
-        <y>190</y>
+        <x>300</x>
+        <y>200</y>
         <width>81</width>
         <height>27</height>
        </rect>
@@ -82,8 +82,8 @@
      <widget class="QPushButton" name="_cancel">
       <property name="geometry">
        <rect>
-        <x>250</x>
-        <y>190</y>
+        <x>400</x>
+        <y>200</y>
         <width>81</width>
         <height>27</height>
        </rect>
@@ -109,6 +109,45 @@
       </property>
       <property name="text">
        <string>TextLabel</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>96</y>
+        <width>51</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>用户名:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_2">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>155</y>
+        <width>41</width>
+        <height>17</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>密码:</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>240</x>
+        <y>36</y>
+        <width>261</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; color:#0000ff;&quot;&gt;交互式磨粒图谱库构建系统&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
      </widget>
     </widget>
